@startuml

class Userx {
  - id : Long
  - createDate : LocalDateTime
  - updateDate : LocalDateTime
  - username : String
  - password : String
  - firstName : String
  - lastName : String
  - email : String
  - phone : String
  - deliveryAddress : String
  - roles : Set<UserxRole>
  enabled : boolean
  
}

Userx -- "1" Userx : createUser
Userx -- "1" Userx : updateUser

enum UserxRole {
  ADMIN
  MANAGER
  EMPLOYEE
}

class Product {
 - id : Long
 - name : String
 - stock : Long
 - price : Double
 - discount : Double
 - description : String
}


class ShoppingCart {
 - id : Long
}

ShoppingCart "1 shoppingCart"  -- "1 user" Userx

class Order {
  - id : Long
  - products : Collection<Products>
  - totalPrice : Double
  - timestamp : LocalDateTime
  - status : OrderStatus
}

enum OrderStatus {
  NEW
  IN_PROGRESS
  DONE
}

Order "0..* orders" -- "1 user" Userx

class Rating {
  - id : Long
  - comment : String
  - rating : RatingScale
  - timestamp : LocalDateTime
}

Rating -- "1" Userx : author
Rating "0..* ratings" -- "1 product" Product 

enum RatingScale {
  1
  2
  3
  4
  5
}

note "We plan on using Springs\nbuilt-in Observer for notifications.\nWe won't be using a notification-entity.\nThe observers only 'send' the different notifications." as N1

class CartItem {
  - id : Long
  - amount : Integer
}
CartItem -- "1" Product : product
CartItem "0..* items" -- "1 shoppingCart" ShoppingCart

@enduml